[gd_scene load_steps=7 format=2]

[ext_resource path="res://Player/Object/Darts/Animation/darts-1.png" type="Texture" id=1]
[ext_resource path="res://Player/Object/Darts/Animation/darts-3.png" type="Texture" id=2]
[ext_resource path="res://Player/Object/Darts/Animation/darts-2.png" type="Texture" id=3]
[ext_resource path="res://Player/Object/Darts/Scripts/Darts.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "fly",
"speed": 15.0
} ]

[node name="Darts" type="RigidBody2D"]
collision_layer = 32
gravity_scale = 0.0
contacts_reported = 1
contact_monitor = true
angular_damp = 100.0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "fly"

[node name="TimerDisapper" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Darts_body_entered"]
[connection signal="timeout" from="TimerDisapper" to="." method="_on_TimerDisapper_timeout"]
